<resources>
    <string name="app_name" translatable="false">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format" translatable="false">%f au</string>
    <string name="km_unit_format" translatable="false">%f km</string>
    <string name="km_s_unit_format" translatable="false">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="network_error">Network error!</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="no_results">No results</string>
    <string name="potentially_hazardous_asteroid_icon">Potentially hazardous asteroid icon</string>
    <string name="not_hazardous_asteroid_icon">Not hazardous asteroid icon</string>
    <string name="asteroid">Asteroid: %s</string>
    <string name="more_info_icon">More Informations</string>
    <string name="image_of_picture_of_the_day">Image of picture of the day</string>
    <string name="loading">Loading</string>
</resources>
