<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.domain.Asteroid" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/app_background"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/activity_main_image_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/asteroid_safe" />

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:contentDescription="@string/close_approach_data_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        style="@style/AppTheme.Title"
                        android:textAlignment="viewStart"/>

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        style="@style/AppTheme.Subtitle"
                        android:text="@{asteroid.closeApproachDate}"
                        android:contentDescription="@{asteroid.closeApproachDate}"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            style="@style/AppTheme.Title"
                            android:contentDescription="@string/absolute_magnitude_title"/>

                        <!-- content description in bind adapter-->
                        <TextView
                            android:id="@+id/absolute_magnitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.Subtitle"
                            android:layout_marginTop="4dp"
                            app:astronomicalUnitText="@{asteroid.magnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_help_circle"
                        android:contentDescription="@string/astronomica_unit_explanation" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/AppTheme.Title"
                    android:text="@string/estimated_diameter_title"
                    android:contentDescription="@string/estimated_diameter_title"/>

                <!-- content description in bind adapter-->
                <TextView
                    android:id="@+id/estimated_diameter"
                    android:layout_width="match_parent"
                    style="@style/AppTheme.Subtitle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:kmUnitText="@{asteroid.diameter}"
                    tools:text="0.82 km" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.Title"
                    android:layout_marginTop="16dp"
                    android:text="@string/relative_velocity_title"
                    android:contentDescription="@string/relative_velocity_title" />

                <!-- content description in bind adapter-->
                <TextView
                    android:id="@+id/relative_velocity"
                    android:layout_width="match_parent"
                    style="@style/AppTheme.Subtitle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:velocityText="@{asteroid.velocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/AppTheme.Title"
                    android:text="@string/distance_from_earth_title"
                    android:contentDescription="@string/distance_from_earth_title" />

                <!-- content description in bind adapter-->
                <TextView
                    android:id="@+id/distance_from_earth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.Subtitle"
                    android:layout_marginTop="4dp"
                    app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>